# python-programming

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/Fundamentals/: Python-Programming-Fundamentals.ipynb  book_info.txt  config.ini  demo_file.txt  formatted_students.csv  learning_log.txt  my_notes.txt  quiz_results.txt  safe_test.txt  shopping_list.txt  student_record.txt  students.csv  study_report.txt
notebooks/Sample-Files/: config.json  sample_data.txt  test_results.csv
notebooks/numpy/: python-numpy.ipynb
notebooks/pandas/: pandas.ipynb
programs/: ArithmeticOperators.py  AssignmentOperators.py  BitwiseOperators.py  ComparisonOperators.py  IdentityOperators.py  hello.py
programs/PythonOperators/: ComparisonOperators.py  LogicalOperators.py  MembershipOperators.py
programs/StringOperations/: StringOperations.py
programs/Typecasting/: TypeCasting.py  TypeCastingToInteger.py  TypecastingToFloat.py
scripts/HelloPython/: hello.py
scripts/PythonOperators/: BitwiseOperators.py
scripts/StringOperations/: StringOperations.py
scripts/Typecasting/: FindType.py  TypeCastingToInteger.py  TypecastingToBoolean.py  TypecastingToFloat.py
