[tool.poetry]
name = "python-programming"
version = "0.1.0"
description = "Comprehensive Python programming tutorials and scripts for learning fundamentals to advanced concepts"
authors = ["Bishal Goutam <bishal@example.com>"]
readme = "README.md"
packages = [{include = "scripts"}, {include = "notebooks"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0"
ipykernel = "^6.0"
matplotlib = "^3.7"
pandas = "^2.0"
numpy = "^1.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true